--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample</title>
+    <title>Iryna Glinska</title>
 </head>
 <body>
-    <h1>Hello HTML!</h1>
-    <img width="300" src="img/kolaps.jpg" alt="kolaps">
+    <h1 id="start">Hello world!</h1>
+    <h2>Это мой первый сайт!</h2>
+    <img width="300" src="img/hi.jpg" alt="hi">
+    <p>Теперь я умею добовлять ссылки</p>
+    <a href="https://www.freecodecamp.org">Это ресурс на котором я проходила тестовые задание</a>
+    <p>Это также,  <a target="_blank" href="https://www.freecodecamp.org"> ссылка на www.freecodecamp.org</a>, сайт на котором много материала для самообучения.
+    </p>
+    <h2>А это активная картинка</h2>
+    <a href="https://www.google.com/?&bih=821&biw=1440&rlz=1C5CHFA_enCA1017&hl=ru"><img width="300" src="img/google.jpg" alt="google">
+    </a>
+    <div>
+        <p>Неупорядоченный список</p>
+         <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+         </ul>
+        <p>Упорядоченный список</p>
+         <ol>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+         </ol>
+    </div>
+    <input type="text" placeholder="Введите текст" required>
+    <label for="HTML"> 
+        <input id="HTML" value="HTML" type="radio" name="HTML-CSS-JavaScript">HTML
+    </label>
+    <label for="CSS">
+        <input id="CSS" value="CSS" type="radio" name="HTML-CSS-JavaScript">CSS
+    </label>
+    <label for="JavaScript">
+        <input id="JavaScript" value="JavaScript" type="radio" name="HTML-CSS-JavaScript">JavaScript
+    </label>
+    <label for="Я эксперт"><input id="Я эксперт" type="checkbox" name="personality">Я эксперт</label>
+    <form action="url-where-you-want-to-submit-form-data">
+        <input>
+    </form>
+    <button type="submit">нажмите для отправки данных</button>
+    <a href="#start">Вернуться на начало страницы</a>
 </body>
 </html>
